--- a/MobileApp/OpportunityFund/app/src/main/res/layout/activity_opportunity_fund_base.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/layout/activity_opportunity_fund_base.xml
@@ -1,5 +1,8 @@
 <!-- Main UI template which contains slider and container -->
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -11,15 +14,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical" />
 
-    <!-- Slider list -->
-    <ListView
-        android:id="@+id/slider_list"
-        android:layout_width="280dp"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation_view"
         android:layout_height="match_parent"
+        android:layout_width="wrap_content"
         android:layout_gravity="start"
-        android:background="#55606e"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/black"
-        android:dividerHeight="1dp" />
+        app:headerLayout="@layout/header"
+        app:menu="@menu/menu_opportunity_fund_base"
+        />
 
 </android.support.v4.widget.DrawerLayout>
