--- a/MobileApp/OpportunityFund/app/src/main/res/values-w820dp/dimens.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values-w820dp/dimens.xml
@@ -3,4 +3,18 @@
          (such as screen margins) for screens with more than 820dp of available width. This
          would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
+
+    <!-- Form related dimensions -->
+    <dimen name="form_heading_font_size">20sp</dimen>
+    <dimen name="form_sub_heading_font_size">12sp</dimen>
+    <dimen name="form_sub_warning_font_size">10sp</dimen>
+    <dimen name="horizontal_child_layout_vertical_padding">12dp</dimen>
+    <dimen name="form_field_label_font_size">15sp</dimen>
+
+    <!-- Bottom buttons -->
+    <dimen name="button_left_padding">2dp</dimen>
+
+    <!-- List view padding -->
+    <dimen name="list_item_vertical_margin">20dp</dimen>
+    <dimen name="list_item_horizontal_margin">5dp</dimen>
 </resources>
