--- a/MobileApp/OpportunityFund/app/src/main/res/values/colors.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/colors.xml
@@ -5,4 +5,18 @@
     <color name="accent">#e1f5fe</color>
     <color name="green_color">#97ce68</color>
 
+    <color name="black_semi_transparent">#B2000000</color>
+    <color name="background">#e5e5e5</color>
+    <color name="half_black">#808080</color>
+    <color name="white">#fafafa</color>
+    <color name="white_pressed">#f1f1f1</color>
+    <color name="pink">#e91e63</color>
+    <color name="pink_pressed">#ec407a</color>
+    <color name="blue_semi_transparent">#805677fc</color>
+    <color name="blue_semi_transparent_pressed">#80738ffe</color>
+
+    <color name="second_grey">#ff999999</color>
+    <color name="card_white">#ffffffff</color>
+    <color name="card_shadow">#8c666666</color>
+
 </resources>
