--- a/MobileApp/OpportunityFund/app/src/main/res/layout/activity_opportunity_fund_base.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/layout/activity_opportunity_fund_base.xml
@@ -12,7 +12,12 @@
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" />
+        android:orientation="vertical" >
+        <include
+        android:id="@+id/toolbar"
+        layout="@layout/tool_bar"
+        />
+    </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navigation_view"
