--- a/MobileApp/OpportunityFund/app/src/main/res/values/dimens.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <!-- List view padding -->
     <dimen name="list_item_vertical_margin">20dp</dimen>
     <dimen name="list_item_horizontal_margin">5dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
