--- a/MobileApp/OpportunityFund/app/src/main/res/values/styles.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-    </style>
+        <item name="windowActionBar">false</item>
+        <item name="windowActionModeOverlay">true</item>
 
+    </style>
 </resources>
