--- a/MobileApp/OpportunityFund/app/src/main/res/values/styles.xml
+++ b/MobileApp/OpportunityFund/app/src/main/res/values/styles.xml
@@ -7,4 +7,6 @@
         <item name="windowActionModeOverlay">true</item>
 
     </style>
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
